--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,6 @@
-google-api-python-client
-google-auth-oauthlib
+google-api-python-client==1.7.2
+google-auth==1.8.0
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.1
+pillow
+
